[gd_scene load_steps=15 format=3 uid="uid://c44g1lknhnnv5"]

[ext_resource type="Script" uid="uid://dqxlkq4almea" path="res://player/items/fishing_rod/fishing_rod.gd" id="1_vjqo0"]
[ext_resource type="Script" uid="uid://dxsfdc1aiiody" path="res://player/items/fishing_rod/bobber.gd" id="2_7bpsm"]
[ext_resource type="Script" uid="uid://bbeivmjkwbowe" path="res://player/items/fishing_rod/cable.gd" id="2_pcaxv"]
[ext_resource type="AudioStream" uid="uid://dd5b6gdlh3w26" path="res://player/items/fishing_rod/CastA.mp3" id="4_i7ygp"]
[ext_resource type="AudioStream" uid="uid://c6bqs72mj6ypw" path="res://player/items/fishing_rod/water-drop-85731.mp3" id="4_yi01o"]
[ext_resource type="AudioStream" uid="uid://dgmmmbqlo5cu0" path="res://player/items/fishing_rod/CastB.mp3" id="5_yi01o"]
[ext_resource type="AudioStream" uid="uid://b42623htpp12x" path="res://player/items/fishing_rod/CastC.mp3" id="6_8ydu5"]

[sub_resource type="CylinderMesh" id="CylinderMesh_vjqo0"]
top_radius = 0.05
bottom_radius = 0.05
height = 1.0

[sub_resource type="SphereMesh" id="SphereMesh_vjqo0"]

[sub_resource type="SphereShape3D" id="SphereShape3D_vjqo0"]

[sub_resource type="SphereShape3D" id="SphereShape3D_7bpsm"]

[sub_resource type="CylinderMesh" id="CylinderMesh_pcaxv"]
top_radius = 0.01
bottom_radius = 0.01

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_8ydu5"]
random_pitch = 1.1
streams_count = 1
stream_0/stream = ExtResource("4_yi01o")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_nlp1d"]
random_pitch = 1.1
streams_count = 3
stream_0/stream = ExtResource("4_i7ygp")
stream_1/stream = ExtResource("5_yi01o")
stream_2/stream = ExtResource("6_8ydu5")

[node name="FishingRod" type="Node3D"]
script = ExtResource("1_vjqo0")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0.314995, -0.32117)
mesh = SubResource("CylinderMesh_vjqo0")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.634769, -0.662817)

[node name="CastHolder" type="Node" parent="."]

[node name="Bobber" type="RigidBody3D" parent="CastHolder"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.499478, -0.808851)
collision_layer = 2
collision_mask = 2
freeze = true
script = ExtResource("2_7bpsm")

[node name="MeshInstance3D" type="MeshInstance3D" parent="CastHolder/Bobber"]
mesh = SubResource("SphereMesh_vjqo0")

[node name="CollisionShape3D" type="CollisionShape3D" parent="CastHolder/Bobber"]
shape = SubResource("SphereShape3D_vjqo0")

[node name="WaterDetector" type="Area3D" parent="CastHolder/Bobber"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="CastHolder/Bobber/WaterDetector"]
shape = SubResource("SphereShape3D_7bpsm")

[node name="CableHolder" type="Node3D" parent="." node_paths=PackedStringArray("source", "bobber")]
script = ExtResource("2_pcaxv")
source = NodePath("../Head")
bobber = NodePath("../CastHolder/Bobber")

[node name="cable" type="MeshInstance3D" parent="CableHolder"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
mesh = SubResource("CylinderMesh_pcaxv")
skeleton = NodePath("../..")

[node name="CastDelay" type="Timer" parent="."]
one_shot = true

[node name="Nibble" type="Timer" parent="."]
one_shot = true

[node name="NibbleSFX" type="AudioStreamPlayer3D" parent="."]
stream = SubResource("AudioStreamRandomizer_8ydu5")

[node name="CastSFX" type="AudioStreamPlayer3D" parent="."]
stream = SubResource("AudioStreamRandomizer_nlp1d")
bus = &"SFX"

[connection signal="cast" from="." to="CastHolder/Bobber" method="show"]
[connection signal="cast" from="." to="CableHolder" method="show"]
[connection signal="cast" from="." to="CastSFX" method="play"]
[connection signal="pull_back" from="." to="CastHolder/Bobber" method="hide"]
[connection signal="pull_back" from="." to="CableHolder" method="hide"]
[connection signal="pull_back" from="." to="Nibble" method="stop"]
[connection signal="pull_back" from="." to="CastSFX" method="play"]
[connection signal="timeout" from="CastDelay" to="." method="_on_cast_delay_timeout"]
[connection signal="timeout" from="Nibble" to="." method="_on_nibble_timeout"]
[connection signal="timeout" from="Nibble" to="CastHolder/Bobber" method="pull"]
[connection signal="timeout" from="Nibble" to="NibbleSFX" method="play"]
